Add phone input to booking form in index.html
Added phone input field to the booking form.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <input type="text">
         <label for="">Email:</label>
         <input type="email">
+        <label for="">Phone:</label>
+        <input type="number">
+        <input type="submit">
     </form>
     </main>
     <!-- Body end here -->
@@ -57,4 +60,5 @@
         <p>Contact us at:info@laundrymart.com</p>
     </footer> 
 </body>
+
 </html>
