--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <h2>Book Now</h2>
     <form action="">
         <label for="">Name:</label>
-        <input type="text">
+        <input type="text" required>
         <label for="">Email:</label>
-        <input type="email">
+        <input type="email" required>
         <label for="">Phone:</label>
         <input type="number">
-        <input type="submit">
+        <input type="submit" required>
     </form>
     </main>
     <!-- Body end here -->
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
